--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>persoo</name>
+	<name>cron-parse</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -21,11 +21,6 @@
 			<artifactId>testng</artifactId>
 			<version>6.1.1</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
