--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,26 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+    <!-- without this the project didn't build from the command line as it was trying to compile in Java 1.3 -->
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <compilerArguments>
+                        <Xlint:rawtypes/>
+                        <Xlint:unchecked/>
+                        <Xlint:serial/>
+                    </compilerArguments>
+                    <showWarnings>true</showWarnings>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.testng</groupId>
